[tool.poetry]
name = "plenary"
version = "1.5.1"
description = "A library of convenient utility methods and classes"
authors = ["Chris Harrison <629204+ravngr@users.noreply.github.com>"]
repository = "https://github.com/swinburne-sensing/plenary"
license = "GPL-3.0-only"
readme = "README.md"

[tool.coverage.run]
omit = [
    "plenary/git.py",
    "plenary/metadata.py",
    "plenary/path.py",
    "plenary/wake.py"
]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.982"

[tool.poetry.dev-dependencies]
"backports.zoneinfo" = { version = "*", markers = "python_version < '3.9'" }
# black = "^22.6.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
tzdata = "*"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
